<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next  >></string>
    <string name="skip">Skip  >></string>
    <string name="plan_it">PlanIt</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_your_timing">Create your timing!</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="take_me_in">Take me in</string>
    <string name="dont_have_an_account">Don\'t\ have an account?</string>
    <string name="register_me">Register me</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="let_make_an_account">Let\'\s make an account!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="re_enter_your_password">Re-Enter your password</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="user_name">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="sign_up">Sign up</string>
    <string name="add_new_task">Add new task +</string>
    <string name="to_do">To-do</string>
    <string name="all">All</string>
    <string name="importance">Important</string>
    <string name="new_task">New Task</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="not_important">Not Important</string>
    <string name="important">Important</string>
    <string name="due_time">Due Time</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="add_task_name">Add task name…</string>
    <string name="add_description">Add description…</string>
    <string name="choose_category">Choose category</string>
    <string name="time_format">dd/mm/yyyy hh:mm</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string name="categories">Categories</string>
    <string name="view">View >></string>
    <string name="create_category">Create new category</string>
    <string name="category_title">Category title</string>
    <string name="enter_category_title">Enter category title</string>
    <string name="icon">Category icon</string>
    <string name="color">Category color</string>
    <string name="choose_icon">Choose icon</string>
    <string name="search">Search for task</string>
    <string name="total">Total:</string>
</resources>