<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.insert.InsertFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvNewTask"
        style="@style/CustomTextViewStyle"

        android:text="@string/new_task"
        android:gravity="center"
        android:textSize="20sp"

        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"

        android:background="@color/dark_blue"

        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toBottomOf="@id/tvNewTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"/>
    
    <TextView
        android:id="@+id/tvTitle"
        style="@style/CustomTextViewStyle"

        android:text="@string/task_title"

        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintTop_toBottomOf="@id/tvNewTask"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etTitle"
        style="@style/CustomEditTextStyle"

        android:hint="@string/add_task_name"

        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvDescription"
        style="@style/CustomTextViewStyle"

        android:text="@string/description"

        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etDescription"
        style="@style/CustomEditTextStyle"

        android:hint="@string/add_task_name"

        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintTop_toBottomOf="@id/etDescription"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/CustomTextViewStyle"
            android:text="@string/not_important"
            android:layout_weight="0.4"
            android:gravity="center"/>

        <CheckBox
            android:id="@+id/cbNotImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvImportant"
            style="@style/CustomTextViewStyle"
            android:text="@string/important"
            android:layout_weight="0.4"
            android:gravity="center"/>

        <CheckBox
            android:id="@+id/cbImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/tvDueTime"
        style="@style/CustomTextViewStyle"

        android:text="@string/due_time"

        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/etDueDate"
        style="@style/CustomEditTextStyle"

        android:hint="@string/time_format"
        android:gravity="start|center"

        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tvDueTime"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCategory"
        style="@style/CustomTextViewStyle"

        android:text="@string/category"

        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintTop_toBottomOf="@id/etDueDate"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/choose_category"
        android:gravity="start|center"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/cancel"
        android:background="@drawable/button_custom"
        app:backgroundTint="@null"
        android:textColor="@color/dark_blue"

        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCreate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/create"
        android:background="@drawable/button_corner"
        app:backgroundTint="@null"
        android:textColor="@color/white"

        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>